test/classes/delete-free/tests-from-design-overview/generic-collection-owned-int-error.good
generic-collection-owned-int-error.chpl:11: In function 'test':
generic-collection-owned-int-error.chpl:12: error: invalid type specifier 'Collection(type int(64))'
generic-collection-owned-int-error.chpl:12: note: type specifier did not match: Collection(type element: _owned)
generic-collection-owned-int-error.chpl:12: note: unable to instantiate field 'element : _owned' with type 'int(64)'
